--- a/progettoBS/index.html
+++ b/progettoBS/index.html
@@ -10,100 +10,251 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 
-<body >
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body>
+    <nav class="navbar navbar-expand-md navbar-black bg-white" aria-label="Fourth navbar example">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar w/ text</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-            </ul>
-            <span class="navbar-text">
-              <a class="nav-link" href="">Book table</a>
-            </span>
-          </div>
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
+                aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExample04">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item mx-md-5">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item mx-md-5">
+                        <a class="nav-link text-danger-emphasis" href="#">Link</a>
+                    </li>
+                    <li class="nav-item mx-md-5">
+                        <a class="nav-link text-danger-emphasis" href="#">About</a>
+                    </li>
+                    <li class="nav-item mx-md-5">
+                        <a class="nav-link text-danger-emphasis">more</a>
+                    </li>
+                </ul>
+                <a type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Book table</a>
+
+            </div>
         </div>
-      </nav>
-    <section class=" img-header bg-primary w-100 d-flex flex-column justify-content-center align-items-center text-white">
+    </nav>
+    <!--  MODAL  -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <h2>Come possiamo aiutarti?</h2>
+                            </div>
+                            <div class="col-12">
+                                <div class="mb-3">
+                                    <label for="exampleFormControlInput1" class="form-label text-white">Name</label>
+                                    <input type="text" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="your name">
+                                    <label for="exampleFormControlInput2" class="form-label text-white">Surname</label>
+                                    <input type="text" class="form-control" id="exampleFormControlInput2"
+                                        placeholder="your surname">
+                                    <label for="exampleFormControlInput3" class="form-label text-white">Email
+                                        address</label>
+                                    <input type="email" class="form-control" id="exampleFormControlInput3"
+                                        placeholder="name@example.com">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleFormControlTextarea1" class="form-label text-white">Example
+                                        textarea</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                        placeholder="Write here what you want"></textarea>
+                                </div>
+                                <button type="button" class="btn btn-success d-block ms-auto">Save changes</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section
+        class=" img-header bg-primary w-100 d-flex flex-column justify-content-center align-items-center text-white">
         <h3>La lune french bistro</h3>
         <h1>A taste of paris</h1>
-        <button class="w-25">Dine with us</button>
+        <a class="w-25 btn btn-white bg-white">Dine with us</a>
     </section>
-    <section class="margine d-flex mb-5">
-        <img class="ms-5" src="https://picsum.photos/250/250" alt="">
-        <img class="ms-5" src="https://picsum.photos/250/250" alt="">
-        <div class="w-25 ms-5 position-relative">
-            <h1>A french fling</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis beatae
-                laborum dolorum maiores quo molestiae aut eligendi, ea harum provident assumenda,
-                commodi temporibus veniam explicabo tempora vitae blanditiis! Recusandae, sed.Lorem ipsum,
-                dolor sit amet consectetur adipisicing elit. Veritatis beatae
-                laborum dolorum maiores quo molestiae aut eligendi, ea harum provident assumenda,
-                commodi temporibus veniam explicabo tempora vitae blanditiis! Recusandae, sed.</p>
-            <button class="position-absolute bottom-o end-0">Book now</button>
+    <section>
+        <div class="container mb-5">
+            <div class="row">
+                <div class="col-12 col-xl-3">
+                    <img class="d-block d-xl-flex mx-auto mt-5" src="https://picsum.photos/250/250" alt="">
+                </div>
+                <div class="col-12 col-xl-3">
+                    <img class="d-block mx-auto mt-5" src="https://picsum.photos/250/250" alt="">
+                </div>
+                <div class="col-12 col-xl-6">
+                    <div class="my-5 position-relative">
+                        <h1>A french fling</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis beatae
+                            laborum dolorum maiores quo molestiae aut eligendi, ea harum provident assumenda,
+                            commodi temporibus veniam explicabo tempora vitae blanditiis! Recusandae, sed.Lorem ipsum,
+                            dolor sit amet consectetur adipisicing elit. Veritatis beatae
+                            laborum dolorum maiores quo molestiae aut eligendi, ea harum provident assumenda,
+                            commodi temporibus veniam explicabo tempora vitae blanditiis! Recusandae, sed.</p>
+                        <a type="button" class="btn btn-primary position-absolute end-0">Book now</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <section class="d-flex justify-content-evenly">
-        <figure class="m-3">
-            <img src="https://picsum.photos/250/250" alt="">
-            <figcaption>mouthwatering appetizers</figcaption>
-        </figure>
-        <figure class="m-3">
-            <img src="https://picsum.photos/250/250" alt="">
-            <figcaption>mouthwatering appetizers</figcaption>
-        </figure>
-        <figure class="m-3">
-            <img src="https://picsum.photos/250/250" alt="">
-            <figcaption>mouthwatering appetizers</figcaption>
-        </figure>
+    <section class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-xl-4">
+                    <div class="d-block mx-auto mb-5" style="width: 18rem;">
+                        <img src="https://picsum.photos/250/250" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-xl-4">
+                    <div class="d-block mx-auto mb-5" style="width: 18rem;">
+                        <img src="https://picsum.photos/250/250" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-xl-4">
+                    <div class="d-block mx-auto mb-5" style="width: 18rem;">
+                        <img src="https://picsum.photos/250/250" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section class="sfondo text-center text-white">
-        <h1 class="mb-5">Love for la lune</h1>
-        <div class="d-flex">
-            <div class="w-75 m-3 d-flex flex-column">
-                <h1 class="align-self-start fs-1">''</h1>
-                <h4><strong>Transported to paris</strong></h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                    laboriosam
-                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                    omnis inventore.</p>
-                <p>- Teddy, Entreprenur</p>
-            </div>
-            <div class="w-75 m-3 d-flex flex-column">
-                <h1 class="align-self-start fs-1">''</h1>
-                <h4><strong>Transported to paris</strong></h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                    laboriosam
-                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                    omnis inventore.</p>
-                <p>- Teddy, Entreprenur</p>
-            </div>
-            <div class="w-75 m-3 d-flex flex-column">
-                <h1  class="align-self-start fs-1">''</h1>
-                <h4><strong>Transported to paris</strong></h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                    laboriosam
-                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                    omnis inventore.</p>
-                <p>- Teddy, Entreprenur</p>
+
+    <!-- Recensioni -->
+        <div class="d-none d-xl-block container-xl bg-black text-center text-white">
+            <div class="row">
+                <h1 class="mb-5">Love for la lune</h1>
+                <div class="col-xl-4">
+                    <div>
+                        <h1>''</h1>
+                        <h4><strong>Transported to paris</strong></h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                            laboriosam
+                            eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
+                            omnis inventore.</p>
+                        <p>- Teddy, Entreprenur</p>
+                    </div>        
+                </div>
+                <div class="col-xl-4">
+                    <div>
+                        <h1>''</h1>
+                        <h4><strong>Transported to paris</strong></h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                            laboriosam
+                            eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
+                            omnis inventore.</p>
+                        <p>- Teddy, Entreprenur</p>
+                    </div>        
+                </div>
+                <div class="col-xl-4">
+                    <div>
+                        <h1>''</h1>
+                        <h4><strong>Transported to paris</strong></h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                            laboriosam
+                            eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
+                            omnis inventore.</p>
+                        <p>- Teddy, Entreprenur</p>
+                    </div>        
+                </div>
             </div>
         </div>
-    </section>
-    <section class="d-flex justify-content-start align-items-center">
-        <img class="resizing" src="https://picsum.photos/250/250" alt="">
-        <div class="ms-5">
+
+    <!--  Recensioni con accordion  -->
+    <div class="container-xl d-block d-xl-none">
+        <div class="row">
+            <div class="col">
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button bg-black bg-gradient text-white" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                          Prima Recensione
+                        </button>
+                      </h2>
+                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                        <div class="accordion-body">
+                            <div>
+                                <h4><strong>Transported to paris</strong></h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                                    laboriosam
+                                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
+                                    omnis inventore.</p>
+                                <p>- Teddy, Entreprenur</p>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed bg-black bg-gradient text-white" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                          Seconda Recensione
+                        </button>
+                      </h2>
+                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div>
+                                <h4><strong>Transported to paris</strong></h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                                    laboriosam
+                                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
+                                    omnis inventore.</p>
+                                <p>- Teddy, Entreprenur</p>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed bg-black bg-gradient text-white" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                          Terza Recensione
+                        </button>
+                      </h2>
+                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div>
+                                <h4><strong>Transported to paris</strong></h4>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                                    laboriosam
+                                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
+                                    omnis inventore.</p>
+                                <p>- Teddy, Entreprenur</p>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="d-flex justify-content-start align-items-center mt-0">
+        <div class="card d-xl-block d-none" style="width: 18rem;">
+            <img src="https://picsum.photos/250/250" class="card-img border-none d-xl-block d-none" alt="...">
+        </div>
+        <div class="ms-5 mt-0">
             <h1>See you soon</h1>
             <p><strong>Phone number</strong></p>
             <p>123456789</p>
