inizio progetto nasted-grid-1 e nasted-grid-2 e reso responsive totale progettoBS

--- a/progettoBS/index.html
+++ b/progettoBS/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-black bg-white" aria-label="Fourth navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#"><img class="img-fluid" src="./assets/icons8-japan-64.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
                 aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -78,22 +78,30 @@
         </div>
     </div>
 
-    <section
-        class=" img-header bg-primary w-100 d-flex flex-column justify-content-center align-items-center text-white">
-        <h3>La lune french bistro</h3>
-        <h1>A taste of paris</h1>
-        <a class="w-25 btn btn-white bg-white">Dine with us</a>
-    </section>
+    <header class="masthead">
+        <div class="container h-100 img-fluid">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 text-center">
+                    <h4 class="text-uppercase text-white"> La lune french bistro</h4>
+                    <h1 class="text-uppercase text-white mio-font">A taste of paris</h1>
+                    <button class="py-3 px-5 border-0 mt-5 text-white bg-black">Dine with us</button>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+
     <section>
         <div class="container mb-5">
             <div class="row">
-                <div class="col-12 col-xl-3">
-                    <img class="d-block d-xl-flex mx-auto mt-5" src="https://picsum.photos/250/250" alt="">
+                <div class="col-6 col-md-3">
+                    <img class="img-fluid my-5 mt-5" src="https://picsum.photos/250/250" alt="">
                 </div>
-                <div class="col-12 col-xl-3">
-                    <img class="d-block mx-auto mt-5" src="https://picsum.photos/250/250" alt="">
+                <div class="col-6 col-md-3">
+                    <img class="img-fluid my-5 mt-5" src="https://picsum.photos/250/250" alt="">
                 </div>
-                <div class="col-12 col-xl-6">
+                <div class="col-12 col-md-6">
                     <div class="my-5 position-relative">
                         <h1>A french fling</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis beatae
@@ -115,7 +123,8 @@
                     <div class="d-block mx-auto mb-5" style="width: 18rem;">
                         <img src="https://picsum.photos/250/250" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the
+                                bulk of the
                                 card's content.</p>
                         </div>
                     </div>
@@ -124,7 +133,8 @@
                     <div class="d-block mx-auto mb-5" style="width: 18rem;">
                         <img src="https://picsum.photos/250/250" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the
+                                bulk of the
                                 card's content.</p>
                         </div>
                     </div>
@@ -133,7 +143,8 @@
                     <div class="d-block mx-auto mb-5" style="width: 18rem;">
                         <img src="https://picsum.photos/250/250" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the
+                                bulk of the
                                 card's content.</p>
                         </div>
                     </div>
@@ -144,126 +155,144 @@
 
 
     <!-- Recensioni -->
-        <div class="d-none d-xl-block container-xl bg-black text-center text-white">
-            <div class="row">
-                <h1 class="mb-5">Love for la lune</h1>
-                <div class="col-xl-4">
-                    <div>
-                        <h1>''</h1>
-                        <h4><strong>Transported to paris</strong></h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                            laboriosam
-                            eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                            omnis inventore.</p>
-                        <p>- Teddy, Entreprenur</p>
-                    </div>        
-                </div>
-                <div class="col-xl-4">
-                    <div>
-                        <h1>''</h1>
-                        <h4><strong>Transported to paris</strong></h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                            laboriosam
-                            eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                            omnis inventore.</p>
-                        <p>- Teddy, Entreprenur</p>
-                    </div>        
-                </div>
-                <div class="col-xl-4">
-                    <div>
-                        <h1>''</h1>
-                        <h4><strong>Transported to paris</strong></h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                            laboriosam
-                            eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                            omnis inventore.</p>
-                        <p>- Teddy, Entreprenur</p>
-                    </div>        
+    <div class="d-none d-xl-block container-xl bg-black text-center text-white">
+        <div class="row">
+            <h1 class="mb-5">Love for la lune</h1>
+            <div class="col-xl-4">
+                <div>
+                    <h1>''</h1>
+                    <h4><strong>Transported to paris</strong></h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                        laboriosam
+                        eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem
+                        odit
+                        omnis inventore.</p>
+                    <p>- Teddy, Entreprenur</p>
                 </div>
             </div>
-        </div>
-
-    <!--  Recensioni con accordion  -->
-    <div class="container-xl d-block d-xl-none">
-        <div class="row">
-            <div class="col">
-                <div class="accordion" id="accordionPanelsStayOpenExample">
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button bg-black bg-gradient text-white" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                          Prima Recensione
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                        <div class="accordion-body">
-                            <div>
-                                <h4><strong>Transported to paris</strong></h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                                    laboriosam
-                                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                                    omnis inventore.</p>
-                                <p>- Teddy, Entreprenur</p>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed bg-black bg-gradient text-white" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                          Seconda Recensione
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <div>
-                                <h4><strong>Transported to paris</strong></h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                                    laboriosam
-                                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                                    omnis inventore.</p>
-                                <p>- Teddy, Entreprenur</p>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed bg-black bg-gradient text-white" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                          Terza Recensione
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <div>
-                                <h4><strong>Transported to paris</strong></h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
-                                    laboriosam
-                                    eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem odit
-                                    omnis inventore.</p>
-                                <p>- Teddy, Entreprenur</p>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+            <div class="col-xl-4">
+                <div>
+                    <h1>''</h1>
+                    <h4><strong>Transported to paris</strong></h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                        laboriosam
+                        eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem
+                        odit
+                        omnis inventore.</p>
+                    <p>- Teddy, Entreprenur</p>
+                </div>
+            </div>
+            <div class="col-xl-4">
+                <div>
+                    <h1>''</h1>
+                    <h4><strong>Transported to paris</strong></h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore nulla amet enim
+                        laboriosam
+                        eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam exercitationem. Dolorem
+                        odit
+                        omnis inventore.</p>
+                    <p>- Teddy, Entreprenur</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <section class="d-flex justify-content-start align-items-center mt-0">
-        <div class="card d-xl-block d-none" style="width: 18rem;">
-            <img src="https://picsum.photos/250/250" class="card-img border-none d-xl-block d-none" alt="...">
+    <!--  Recensioni con accordion  -->
+    <div class="container-xl d-block d-xl-none">
+        <div class="row">
+            <div class="col-12">
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button bg-black bg-gradient text-white" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
+                                aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                Prima Recensione
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                            <div class="accordion-body">
+                                <div>
+                                    <h4><strong>Transported to paris</strong></h4>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore
+                                        nulla amet enim
+                                        laboriosam
+                                        eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam
+                                        exercitationem. Dolorem odit
+                                        omnis inventore.</p>
+                                    <p>- Teddy, Entreprenur</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed bg-black bg-gradient text-white" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo"
+                                aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                                Seconda Recensione
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                <div>
+                                    <h4><strong>Transported to paris</strong></h4>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore
+                                        nulla amet enim
+                                        laboriosam
+                                        eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam
+                                        exercitationem. Dolorem odit
+                                        omnis inventore.</p>
+                                    <p>- Teddy, Entreprenur</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed bg-black bg-gradient text-white" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
+                                aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                                Terza Recensione
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                <div>
+                                    <h4><strong>Transported to paris</strong></h4>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi dolore
+                                        nulla amet enim
+                                        laboriosam
+                                        eaque tempora sed incidunt repellendus ratione debitis, qui dicta ullam
+                                        exercitationem. Dolorem odit
+                                        omnis inventore.</p>
+                                    <p>- Teddy, Entreprenur</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="ms-5 mt-0">
-            <h1>See you soon</h1>
-            <p><strong>Phone number</strong></p>
-            <p>123456789</p>
+    </div>
 
-            <p><strong>Email address</strong></p>
-            <p>email@gmail.com</p>
+    <section class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 p-0">
+                <img src="./assets/koi fish yin yang.jpg" class="border-none img-fluid" alt="...">
+            </div>
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+                <div class=""></div>
+                <h1>See you soon</h1>
+                <p><strong>Phone number</strong></p>
+                <p>123456789</p>
 
-            <p><strong>Restaurant</strong></p>
-            <p>123 via allucinato Monza Brianza</p>
+                <p><strong>Email address</strong></p>
+                <p>email@gmail.com</p>
+
+                <p><strong>Restaurant</strong></p>
+                <p>123 via allucinato Monza Brianza</p>
+            </div>
         </div>
     </section>
 
