--- a/nasted-grid-1/index.html
+++ b/nasted-grid-1/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="container">
         <div class="row p-5">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-between">
                 <h1 class="mt-md-2">Add your titlehere</h1>
-                <button class="py-3 px-5 border-0 bg-dark text-white mt-5">Add a Call-to-Action</button>
+                <button class="py-3 px-3 border-0 bg-dark text-white w-50 mb-5 mb-md-0">Add a Call-to-Action</button>
             </div>
-            <div class="col-12 col-md-6 mt-5">
+            <div class="col-12 col-md-6">
                 <div class="row">
                     <div class="col-12">
                         <h3>Your main idea goes here</h3>
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <div class="row">
-                            <div class="col-12 mb-5">
+                            <div class="col-12 mt-5">
                                 <h1>your section header here</h1>
                             </div>
                             <div class="col-12">
