--- a/nasted-grid-2/index.html
+++ b/nasted-grid-2/index.html
@@ -17,9 +17,10 @@
             <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
                 <h1 class="text-center">your section title goes here</h1>
                 <div class="w-75 d-flex flex-column justify-content-center align-items-center">
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus neque inventore
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus neque
+                        inventore
                         at dignissimos officia saepe incidunt, odio voluptates adipisci pariatur placeat veniam.
-                        Voluptatibus ipsum id mollitia architecto, voluptas consequuntur.</p>    
+                        Voluptatibus ipsum id mollitia architecto, voluptas consequuntur.</p>
                 </div>
             </div>
             <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
@@ -27,43 +28,91 @@
             </div>
             <div class="col-12">
                 <div class="row">
-                    <div class="col-6 col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <div class="col-6 col-md-3 d-flex flex-column">
                         <img class="img-fluid massima-altezza me-auto" src="./assets/eevee.png" alt="">
                         <h2>Your article title goes here</h2>
                     </div>
-                    <div class="col-6 col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <div class="col-6 col-md-3 d-flex flex-column">
                         <img class="img-fluid massima-altezza me-auto" src="./assets/eeveefuoco.png" alt="">
                         <h2>Your article title goes here</h2>
 
                     </div>
-                    <div class="col-6 col-md-3 d-flex flex-column justify-content-center align-items-center mt-5">
-                        <h2>your section title goes here</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus neque inventore
-                            at dignissimos officia saepe incidunt, odio voluptates adipisci</p>
+                    <div class="col-12 col-md-6 mb-3">
                         <div class="row">
-                            <div
-                                class="col-12 d-flex flex-column justify-content-center align-items-center mt-5">
-                                <h2>your section title goes here</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus neque inventore
-                                    at dignissimos officia saepe incidunt, odio voluptates adipisci</p>
+                          <div class="col-12 col-md-6 mb-5 aos-init aos-animate" data-aos="zoom-in">
+                            <div class="card rounded-0 border-0 shadow border-main d-block mx-auto" style="width: 18rem;">
+                              <img src="./assets/sfondo1.jpg" class="card-img-top" alt="lake">
+                              <div class="card-body position-relative">
+                                <p class="card-text small font-custom tx-acc">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <button class="text-white bg-acc px-3 py-2 border-0 rounded-2 font-custom position-absolute end-0">Destinazione</button>
+                              </div>
                             </div>
-                        </div>
-
-                    </div>
-                    <div class="col-6 col-md-3 d-flex flex-column justify-content-center align-items-center mt-5">
-                        <h2>your section title goes here</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus neque inventore
-                            at dignissimos officia saepe incidunt, odio voluptates adipisci</p>
-                        <div class="row">
-                            <div
-                                class="col-12 d-flex flex-column justify-content-center align-items-center mt-5">
-                                <h2>your section title goes here</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus neque inventore
-                                    at dignissimos officia saepe incidunt, odio voluptates adipisci</p>
+                          </div>
+                          <div class="col-12 col-md-6 mb-5 aos-init aos-animate" data-aos="zoom-in">
+                            <div class="card rounded-0 border-0 shadow border-main d-block mx-auto" style="width: 18rem;">
+                              <img src="./assets/sfondo1.jpg" class="card-img-top" alt="lake">
+                              <div class="card-body position-relative">
+                                <p class="card-text small font-custom tx-acc">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <button class="text-white bg-acc px-3 py-2 border-0 rounded-2 font-custom position-absolute end-0">Destinazione</button>
+                              </div>
                             </div>
+                          </div>
+                          <div class="col-12 col-md-6 mb-5 aos-init aos-animate" data-aos="zoom-in">
+                            <div class="card rounded-0 border-0 shadow border-main d-block mx-auto" style="width: 18rem;">
+                              <img src="./assets/sfondo1.jpg" class="card-img-top" alt="lake">
+                              <div class="card-body position-relative">
+                                <p class="card-text small font-custom tx-acc">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <button class="text-white bg-acc px-3 py-2 border-0 rounded-2 font-custom position-absolute end-0">Destinazione</button>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6 mb-5 aos-init aos-animate" data-aos="zoom-in">
+                            <div class="card rounded-0 border-0 shadow border-main d-block mx-auto" style="width: 18rem;">
+                              <img src="./assets/sfondo1.jpg" class="card-img-top" alt="lake">
+                              <div class="card-body position-relative">
+                                <p class="card-text small font-custom tx-acc">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <button class="text-white bg-acc px-3 py-2 border-0 rounded-2 font-custom position-absolute end-0">Destinazione</button>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6 mb-5 aos-init aos-animate" data-aos="zoom-in">
+                            <div class="card rounded-0 border-0 shadow border-main d-block mx-auto" style="width: 18rem;">
+                              <img src="./assets/sfondo1.jpg" class="card-img-top" alt="lake">
+                              <div class="card-body position-relative">
+                                <p class="card-text small font-custom tx-acc">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <button class="text-white bg-acc px-3 py-2 border-0 rounded-2 font-custom position-absolute end-0">Destinazione</button>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6 mb-5 aos-init aos-animate" data-aos="zoom-in">
+                            <div class="card rounded-0 border-0 shadow border-main d-block mx-auto" style="width: 18rem;">
+                              <img src="./assets/sfondo1.jpg" class="card-img-top" alt="lake">
+                              <div class="card-body position-relative">
+                                <p class="card-text small font-custom tx-acc">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <button class="text-white bg-acc px-3 py-2 border-0 rounded-2 font-custom position-absolute end-0">Destinazione</button>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6 mb-5 aos-init" data-aos="zoom-in">
+                            <div class="card rounded-0 border-0 shadow border-main d-block mx-auto" style="width: 18rem;">
+                              <img src="./assets/sfondo1.jpg" class="card-img-top" alt="lake">
+                              <div class="card-body position-relative">
+                                <p class="card-text small font-custom tx-acc">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <button class="text-white bg-acc px-3 py-2 border-0 rounded-2 font-custom position-absolute end-0">Destinazione</button>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-12 col-md-6 mb-5 aos-init" data-aos="zoom-in">
+                            <div class="card rounded-0 border-0 shadow border-main d-block mx-auto" style="width: 18rem;">
+                              <img src="./assets/sfondo1.jpg" class="card-img-top" alt="lake">
+                              <div class="card-body position-relative">
+                                <p class="card-text small font-custom tx-acc">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <button class="text-white bg-acc px-3 py-2 border-0 rounded-2 font-custom position-absolute end-0">Destinazione</button>
+                              </div>
+                            </div>
+                          </div>
                         </div>
-
-
+                      </div>
 
                     </div>
                 </div>
